update with unit tests. the test resource is putting into the build folder.